Created UI for TimesheetGenerator (#192)
* Moved Modules

* Created UI
- Date already sets correctly on startup
- Semester Selectors work as intended
  - When selecting month, semester type adjusts
  - When selecting semester type (also through auto), the label showing the additional year adjusts for WS
  - When changing the year, it also adjusts

* Add Entry Dialogue

* Cleanup Dialog

* Timesheet Entries
- Added Timesheet entries
- Added Editing Entries
- Renamed from Dialogue to Dialog
- Todo: ToString for the list

* List Formatter
- Formatted to show nicely
- Todo: Sort by Date & Time
- Todo: Day (completely forgot this)
- Todo: Saving and all

* Added Days, Time worked, and more

* JSON

* Added Day

* Added (and saving of) Global Settings

* Added Confirm Dialog to Deletion

* Moved to Package + Minor Changes

* Month and open file settings

* Save as Save as, File Dialogs
- Todo: Import/Save Month

* Month Saving & co.
- gotta go

* Added Month Saving
- Saving, Opening, etc. is now fully functional

* Added Duplicate Button

* Added Predecessor and (non-func) Successor Time
- Successor time is calculated automatically and not yet implemented
- It will be implemented when adding total hours label next time

* Total Hour Label

* Better hour label + Bug Fixes
- Duplicate now clones by value, not reference (hehe)

* Minor Fix
- Fixed a bug where no update for total time was invoked after editing such that until the next total time update, the edited entries time counted double

* Added Some Compiler Code for Tex
- Also added Compile and Print as separate buttons

* Added Some Compiler Code for Tex
- Also added Compile and Print as separate buttons

* Revert "Added Some Compiler Code for Tex"

This reverts commit c54d83ed593f49969f0068b89d46ff2e7379a7c9.

* Custom Global & Month Serializer
- +Minor Debugging
- Also, I might have been wrong about bundling the latex compilation...
  -> Requ